--- a/panel/templates/panel/index.html
+++ b/panel/templates/panel/index.html
@@ -16,15 +16,15 @@
    	<div class="container">
       <h1>Document</h1>
       <div class="section">
-         <p>This application have got demo data for units with IDs: 4, 5, 6</p>
+         <p>This application have got demo data for unit with IDs: 4, 5, 6</p>
          <p>API for accessing Performance data for individual system follows this style: </p><a href="#">https://solarenergy.herokuapp.com/panel/{unit_id}?date={dd-mm-yyyy}</a>
          <p>API for sending mails for a given unit follows this style:</p> <a href="#">https://solarenergy.herokuapp.com/panel/{unit_id}/mail?date={dd-mm-yyyy}</a>
-         <p>Note: Acceptable date format of making request is dd-mm-yyyy</p>
+         <p>Note: Acceptable date format of making request is DD-MM-YYYY</p>
          <p>Further a mail server is configured to send mail at 8 PM to recipents of mail(Both of the paramaaters can be cahnged in code as and when needed)</p>
       </div>
       <div class="divider"></div>
       <div class="section">
-         <p> Database as of now has got data from date 20-03-2107 till 20-04-2017 for testing</p>
+         <p> Database as of now is populated with data from date 20-03-2107 till 20-04-2017 for testing</p>
       </div>
      </div>
    </body>
