--- a/panel/templates/panel/index.html
+++ b/panel/templates/panel/index.html
@@ -19,7 +19,8 @@
          <p>This application have got demo data for unit with IDs: 4, 5, 6</p>
          <p>API for accessing Performance data for individual system follows this style: </p><a href="#">https://solarenergy.herokuapp.com/panel/{unit_id}?date={dd-mm-yyyy}</a>
          <p>API for sending mails for a given unit follows this style:</p> <a href="#">https://solarenergy.herokuapp.com/panel/{unit_id}/mail?date={dd-mm-yyyy}</a>
-         <p>Note: Acceptable date format of making request is DD-MM-YYYY</p>
+         <p><strong>Note:</strong> Acceptable date format of making request is DD-MM-YYYY</p>
+         <a href="https://github.com/saketbairoliya2/solarenergy">Repository Link</a>
          <p>Further a mail server is configured to send mail at 8 PM to recipents of mail(Both of the paramaaters can be cahnged in code as and when needed)</p>
       </div>
       <div class="divider"></div>
